Replaced campgrounds with bikes

--- a/views/bikes/index.ejs
+++ b/views/bikes/index.ejs
@@ -20,7 +20,7 @@
                     <div class="caption">
                         <h4> <%= bike.name %> </h4>
                     </div>
-                    <a class="detailBtn btn btn-primary" href="/campgrounds/<%= bike._id %>"> More info </a>
+                    <a class="detailBtn btn btn-primary" href="/bikes/<%= bike._id %>"> More info </a>
                 </div>
             </div>
         <% }); %>
