--- a/views/bikes/edit.ejs
+++ b/views/bikes/edit.ejs
@@ -5,24 +5,24 @@
         <h1 class="newFormH1"> Edit camp </h1>
         
         <div class="newForm">
-            <form action="/campgrounds/<%= campground._id %>?_method=PUT" method="POST">
+            <form action="/bikes/<%= bike._id %>?_method=PUT" method="POST">
                 <div class="form-group">
-                    <label>Campground Name</label>
-                    <input class="form-control" type="text" name="name" value="<%= campground.name %>">
+                    <label>Bike Name</label>
+                    <input class="form-control" type="text" name="name" value="<%= bike.name %>">
                 </div>
                 <div class="form-group">
                        <label>Image URL</label>
-                    <input class="form-control" type="text" name="image" value="<%= campground.image %>">
+                    <input class="form-control" type="text" name="image" value="<%= bike.image %>">
                 </div>
                 <div class="form-group">
-                       <label>Campground Description</label>
-                    <textarea name="description" rows="4" cols="50"><%= campground.description %>"</textarea>
+                       <label>Bike Description</label>
+                    <textarea name="description" rows="4" cols="50"><%= bike.description %>"</textarea>
                 </div>
                 <div class="form-group">
-                    <button class="btn btn-lg btn-primary btn-block"> Update camp! </button>
+                    <button class="btn btn-lg btn-primary btn-block"> Update swag! </button>
                 </div>
             </form>
-            <a class="btn" href="/campgrounds"> Go back </a>
+            <a class="btn" href="/bikes"> Go back </a>
         </div>
     </div>
 </div>
