--- a/views/bikes/show.ejs
+++ b/views/bikes/show.ejs
@@ -3,7 +3,7 @@
 <div class="container">
    <div class="row">
        <div class="col-md-3">
-         <p class="lead">YelpCamp</p>
+         <p class="lead">MotoSwag</p>
          <div class="list-group">
            <li class="list-group-item active">Info 1</li>
            <li class="list-group-item">Info 2</li>
@@ -12,16 +12,16 @@
        </div> 
        <div class="col-md-9">
          <div class="thumbnail">
-            <img class="img-responsive" src="<%= campground.image %>">
+            <img class="img-responsive" src="<%= bike.image %>">
          </div> 
          <div class="caption-full">
              <h4 class="pull-right">$9.00/night</h4>
-             <a><h4> <%= campground.name %> </h4></a>
-              <p> <%= campground.description %> </p>
-             <p><em>Submitted by <%= campground.author.username %></em></p>
-             <% if(currentUser && campground.author.id.equals(currentUser._id)) { %>
-                 <a class="btn btn-warning btn-xs" href="/campgrounds/<%= campground._id %>/edit">Edit</a> 
-                 <form id="formDelete" action="/campgrounds/<%= campground.id %>?_method=DELETE" method="POST">
+             <a><h4> <%= bike.name %> </h4></a>
+              <p> <%= bike.description %> </p>
+             <p><em>Submitted by <%= bike.author.username %></em></p>
+             <% if(currentUser && bike.author.id.equals(currentUser._id)) { %>
+                 <a class="btn btn-warning btn-xs" href="/bikes/<%= bike._id %>/edit">Edit</a> 
+                 <form id="formDelete" action="/bikes/<%= bike.id %>?_method=DELETE" method="POST">
                      <button class="btn btn-danger btn-xs">Delete</button>
                  </form>
              <% } %>
@@ -29,18 +29,18 @@
          </div>
          <div class="well">
              <div class="text-right">
-                  <a class="btn btn-success" href="/campgrounds/<%= campground._id %>/comments/new"> Add Comment </a>
+                  <a class="btn btn-success" href="/bikes/<%= bike._id %>/comments/new"> Add Comment </a>
              </div>
              <hr>
-             <% campground.comments.forEach(function(comment){ %> 
+             <% bike.comments.forEach(function(comment){ %> 
              <div class="row">
                  <div class="col-md-12">
                     <strong><%= comment.author.username %></strong>
                      <span class="pull-right">10 days ago</span>
                      <p><%= comment.text %></p>
                      <% if(currentUser && comment.author.id.equals(currentUser._id)) { %>
-                         <a class="btn btn-xs btn-warning" href="/campgrounds/<%= campground._id %>/comments/<%= comment._id %>/edit">Edit comment</a>
-                         <form id="formDelete" action="/campgrounds/<%= campground._id %>/comments/<%= comment._id %>?_method=DELETE" method="POST">
+                         <a class="btn btn-xs btn-warning" href="/bikes/<%= bike._id %>/comments/<%= comment._id %>/edit">Edit comment</a>
+                         <form id="formDelete" action="/bikes/<%= bike._id %>/comments/<%= comment._id %>?_method=DELETE" method="POST">
                              <button class="btn btn-xs btn-danger">Delete comment</button>
                          </form>
                         <% } %>
