motoswag mvp completed

--- a/views/bikes/index.ejs
+++ b/views/bikes/index.ejs
@@ -4,10 +4,10 @@
     
     <header class="jumbotron">
             <div class="container">
-                <h2> MotoSwag </h2>
+                <h2> <i class="fa fa-cogs" aria-hidden="true"></i>  MotoSwag </h2>
                 <p> Where swag riders and their bikes belong. </p>
                 <p> 
-                    <a class="btn btn-primary btn-large" href="/bikes/new"> Add New Bike! </a>
+                    <a class="btn btn-primary btn-large" href="/bikes/new"> Add My Motorcycle </a>
                 </p>
             </div>
     </header>
