--- a/views/landing.ejs
+++ b/views/landing.ejs
@@ -3,6 +3,6 @@
 <h2> Welcome to our Landing Page! </h2>
 
 <br>
-<a href="/campgrounds"> Check out some of our campgrounds! </a>  
+<a href="/bikes"> Check out some of our bikes! </a>  
 
 <% include partials/footer %>
