--- a/views/partials/header.ejs
+++ b/views/partials/header.ejs
@@ -1,16 +1,17 @@
 <!DOCTYPE html>
 <html>
     <head> 
-        <title> YelpCamp </title>
+        <title> MotoSwag </title>
         <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/css/bootstrap.min.css">
         <link rel="stylesheet" href="/stylesheets/main.css">
+        <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.6.1/css/font-awesome.min.css">
     </head>
 <body>
     
 <nav class="navbar navbar-default">
     <div class="container-fluid">
         <div class="navbar-header">
-            <a class="navbar-brand" href="/"> YelpCamp</a>
+            <a class="navbar-brand" href="/"><i class="fa fa-cogs" aria-hidden="true"></i> MotoSwag</a>
         </div>
         <div class="collpase navbar-collapse">
             <ul class="nav navbar-nav navbar-right">
